--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,12 @@
+@import "config";
+
+// fonts
 @import url("https://fonts.googleapis.com/css?family=Lato");
 
 * {
   box-sizing: border-box;
-}
-
-body {
-  font-family: "Lato", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 header {
@@ -15,8 +16,67 @@ header {
   background: #fff;
 }
 
+body {
+  font-family: "Lato", sans-serif;
+  height: 100%;
+  margin: 0;
+
+  .jumbotron {
+    margin-bottom: 0;
+    background: {
+      image: url("../img/jumbotron/bg-gold.png");
+      size: cover;
+    }
+
+    .youtube {
+      width: 100%;
+      height: auto;
+    }
+
+    .header {
+      text-align: center;
+      margin: -40px 0 45px 0;
+
+      h1 {
+        font-weight: 800;
+      }
+    }
+
+    .bullets {
+      margin-left: 20px;
+
+      li {
+        margin-bottom: 3.75rem;
+
+        &:nth-child(1) {
+          margin-top: 0.75rem;
+        }
+
+        span {
+          margin-left: 10px;
+          font-size: 1.25rem;
+        }
+      }
+
+      button.cta {
+        width: 400px;
+        padding: 10px 0;
+        text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+        border: none;
+        @include btn;
+      }
+    }
+  }
+
+  main {
+    height: 100%;
+    min-height: calc(100vh - 215px);
+  }
+}
+
 footer {
   color: #777777;
+  height: 215px;
 
   a,
   a:hover {
@@ -37,3 +97,5 @@ footer {
     }
   }
 }
+
+@import "media";
