--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,6 +4,7 @@
   color: #fff;
   font-size: 1.5rem;
   border-radius: 5px;
+  cursor: pointer;
   box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.75);
