--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,24 +1,34 @@
-// tablet
+// tablet (max-width: 768px)
 @include mediaM {
   body {
     .jumbotron {
-      div#bullet-list {
-        margin: 0 auto;
-        margin-top: 2rem;
+      .row {
+        div#bullet-list {
+          margin: 0 auto;
+          margin-top: 2rem;
+
+          .bullets {
+            li {
+              margin-bottom: 2.25rem;
+
+              &:nth-child(1) {
+                margin-top: 0.75rem;
+              }
+
+              span {
+                margin-left: 10px;
+                font-size: 1.25rem;
+              }
+            }
+          }
+        }
       }
 
-      .bullets {
-        li {
-          margin-bottom: 2.75rem;
+      .carousel {
+        padding: 10%;
 
-          &:nth-child(1) {
-            margin-top: 0.75rem;
-          }
-
-          span {
-            margin-left: 10px;
-            font-size: 1rem;
-          }
+        .carousel-header {
+          font-size: 1.75rem;
         }
       }
     }
@@ -29,21 +39,66 @@
 @include mediaS {
   body {
     .jumbotron {
-      .header {
+      .jumbotron-header {
         margin: -15px 0 45px 0;
 
         h1 {
           font-size: 2rem;
+          padding-top: 1rem;
         }
         h4 {
           font-size: 1.25rem;
         }
       }
-      .bullets {
-        margin-top: 1.75rem;
 
-        button.cta {
-          width: 93%;
+      .row {
+        div#bullet-list {
+          .bullets {
+            margin: 0.15rem 0 0 0;
+
+            li {
+              span {
+                font-size: 0.95rem;
+                margin-left: 5px;
+              }
+
+              button.cta {
+                width: 100%;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    main {
+      .featured {
+        .featured-header {
+          p {
+            &:before {
+              width: 25vw;
+            }
+
+            &:after {
+              width: 25vw;
+            }
+          }
+        }
+
+        .featured-logos {
+          li {
+            &.nav-item {
+              &.col-sm-3 {
+                padding: 20px 55px;
+              }
+            }
+          }
+        }
+      }
+
+      .carousel {
+        .carousel-header {
+          font-size: 1.25rem;
         }
       }
     }
@@ -53,6 +108,12 @@
     .dk-grey {
       .footer-menu {
         padding: 25px 5%;
+      }
+
+      .copyright {
+        p {
+          font-size: 0.75rem;
+        }
       }
     }
   }
