--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,7 +33,7 @@ body {
       height: auto;
     }
 
-    .header {
+    .jumbotron-header {
       text-align: center;
       margin: -40px 0 45px 0;
 
@@ -71,6 +71,62 @@ body {
   main {
     height: 100%;
     min-height: calc(100vh - 215px);
+
+    .featured {
+      background: #ffffea;
+
+      .featured-header {
+        text-align: center;
+        padding-top: 5px;
+
+        p {
+          font-weight: 800;
+          padding: 15px 0 0;
+
+          &:before {
+            content: "";
+            display: inline-block;
+            margin-right: 20px;
+            width: 40vw;
+            transform: translateY(-4px);
+            border-top: 1px solid #c4c4c4;
+          }
+
+          &:after {
+            content: "";
+            display: inline-block;
+            margin-left: 20px;
+            width: 40vw;
+            transform: translateY(-4px);
+            border-top: 1px solid #c4c4c4;
+          }
+        }
+      }
+
+      ul.featured-logos {
+        display: flex;
+        align-items: center;
+        padding: 20px 0 30px 0;
+      }
+    }
+
+    .carousel {
+      background: #93b7be;
+      height: 108px;
+      display: table;
+      margin: 0 auto;
+      width: 100%;
+      text-align: center;
+
+      .carousel-header {
+        display: table-cell;
+        vertical-align: middle;
+        color: #fff;
+        font-weight: 500;
+        font-size: 2.25rem;
+        font-weight: 400;
+      }
+    }
   }
 }
 
