--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -10,6 +10,23 @@
   -moz-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.75);
 }
 
+@mixin bulletList {
+  margin-left: 20px;
+
+  li {
+    margin-bottom: 3.75rem;
+
+    &:nth-child(1) {
+      margin-top: 0.75rem;
+    }
+
+    span {
+      margin-left: 10px;
+      font-size: 1.25rem;
+    }
+  }
+}
+
 // media query mixins
 @mixin mediaXS {
   @media screen and (max-width: 375px) {
