--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -3,7 +3,7 @@
   body {
     .jumbotron {
       .row {
-        div#bullet-list {
+        div#bullet-list-1 {
           margin: 0 auto;
           margin-top: 2rem;
 
@@ -52,7 +52,7 @@
       }
 
       .row {
-        div#bullet-list {
+        div#bullet-list-1 {
           .bullets {
             margin: 0.15rem 0 0 0;
 
