--- a/scss/main.scss
+++ b/scss/main.scss
@@ -99,23 +99,25 @@ body {
     }
 
     .carousel {
-      background: #93b7be;
-      height: 108px;
-      display: table;
-      margin: 0 auto;
-      width: 100%;
-      text-align: center;
-
       .carousel-header {
-        display: table-cell;
-        vertical-align: middle;
-        color: #fff;
-        font-weight: 500;
-        font-size: 2.25rem;
-        font-weight: 400;
+        background: #93b7be;
+        height: 108px;
+        display: table;
+        margin: 0 auto;
+        width: 100%;
+        text-align: center;
+
+        p {
+          display: table-cell;
+          vertical-align: middle;
+          color: #fff;
+          font-weight: 500;
+          font-size: 2.25rem;
+          font-weight: 400;
+        }
       }
 
-      .carousel-jumbotron {
+      .carousel-wrapper {
         background: {
           image: url("../img/carousel/bg-abstract.png");
           size: cover;
@@ -143,7 +145,6 @@ body {
       background: {
         image: url("../img/banner/bg-leaves.png");
       }
-      //   height: 215px;
       padding: 45px 10% 20px;
       display: table;
       margin: 0 auto;
@@ -157,6 +158,60 @@ body {
 
         p {
           padding-top: 20px;
+        }
+      }
+    }
+
+    .points {
+      background: {
+        image: url("../img/points/bg-dots.png");
+        size: cover;
+      }
+      padding: 45px 10% 20px;
+      margin: 0 auto;
+      width: 100%;
+      text-align: center;
+
+      .points-header {
+        text-align: center;
+        font-weight: 800;
+        margin: 1rem auto;
+      }
+
+      .teardrops {
+        // TODO: media queries for small screens
+        margin: 1.5rem auto;
+        height: 80px;
+        width: auto;
+      }
+
+      .point-grid {
+        margin-bottom: 6rem;
+        .row {
+          margin-top: 2.75rem;
+        }
+        .point {
+          display: flex;
+          justify-content: flex-start;
+          align-items: top;
+
+          img.point-icon {
+            width: 75px;
+            height: 75px;
+            float: left;
+          }
+
+          .point-copy {
+            text-align: left;
+            margin-left: 8px;
+            font-size: 0.85rem;
+            // TODO: reduce padding right for smaller screens
+            padding: 0 50px 0 5px;
+
+            h6 {
+              font-weight: 800;
+            }
+          }
         }
       }
     }
