--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,14 +3,14 @@
   background-color: #17bebb;
   color: #fff;
   font-size: 1.5rem;
-  border-radius: 5px;
+  border-radius: 3px;
   cursor: pointer;
   padding: 10px 0;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
   border: none;
-  box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 3px 2px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.75);
 }
 
 @mixin bulletList {
@@ -34,6 +34,25 @@
   text-align: center;
   font-weight: 800;
   margin: 1rem auto;
+}
+
+@mixin cornerRibbon {
+  position: fixed;
+  width: 200px;
+  position: absolute;
+  top: 25px;
+  left: -50px;
+  text-align: center;
+  line-height: 50px;
+  letter-spacing: 1px;
+  color: #e7e7e7;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  top: 25px;
+  right: -50px;
+  left: auto;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
 
 // media query mixins
