--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,10 @@ header {
   background: #fff;
 }
 
+.container-fluid {
+  padding: 0;
+}
+
 .cta {
   @include btn;
 }
@@ -57,8 +61,8 @@ body {
   }
 
   main {
-    height: 100%;
-    min-height: calc(100vh - 215px);
+    // min-height: calc(100vh - 215px);
+    // box-shadow: 0 3px 2px -2px rgba(0, 0, 0, 0.5);
 
     .featured {
       background: #ffffea;
@@ -283,12 +287,149 @@ body {
         }
       }
     }
+
+    .order-options {
+      background: #ffffea;
+      padding: 45px 10% 20px;
+      margin: 0 auto;
+      width: 100%;
+      text-align: center;
+
+      .order-options-header {
+        h2 {
+          text-align: center;
+          font-weight: 800;
+        }
+      }
+
+      .options {
+        .row {
+          margin-bottom: 0.5rem;
+
+          .option {
+            // background: #fff;
+            border-radius: 5px;
+            line-height: 0.75rem;
+            padding: 0 10%;
+            overflow: hidden;
+
+            &.selected {
+              border: 3px solid #1db278;
+              box-shadow: -1px 3px 15px 2px rgba(0, 0, 0, 0.35);
+            }
+
+            img {
+              height: 150px;
+              width: auto;
+              margin: 15px 0 20px;
+            }
+
+            .special-price {
+              font-size: 0.75rem;
+              margin-bottom: 25px;
+
+              span {
+                color: #ea4841;
+              }
+            }
+
+            .option-cta {
+              text-shadow: none;
+              text-transform: uppercase;
+              font-size: 1rem;
+              width: 80%;
+              padding: 15px 0;
+            }
+
+            &.option-1 {
+              box-shadow: -1px 3px 2px -2px rgba(0, 0, 0, 0.35);
+            }
+
+            &.option-1,
+            &.option-3 {
+              background: #fff;
+              padding: 15px 0;
+              height: 85%;
+              transform: translateY(10px);
+            }
+
+            &.option-2 {
+              background: #cdf6e6;
+              padding: 30px 0 20px;
+
+              .corner-ribbon {
+                background: #ea4841;
+                @include cornerRibbon;
+              }
+
+              img {
+                margin-top: 5px;
+              }
+            }
+
+            &.option-3 {
+              box-shadow: 1px 3px 2px -2px rgba(0, 0, 0, 0.35);
+
+              .corner-ribbon {
+                background: #028090;
+                @include cornerRibbon;
+              }
+
+              #headline-3 {
+                margin-top: 20px;
+              }
+
+              img {
+                margin-top: -10px;
+                height: 130px;
+              }
+
+              h5 {
+                margin-top: -20px;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .payment-details {
+      background: #ffffea;
+      border-top: 1px solid #d4d4cb;
+      text-align: center;
+      //   box-shadow: 0 4px 2px -2px gray;
+      padding: 20px 0 10px;
+
+      h6 {
+        font-weight: 800;
+        margin: 0;
+        padding-top: 20px;
+      }
+    }
   }
 }
 
 footer {
+  .footer-banner {
+    background: #93b7be;
+    text-align: center;
+    padding: 10px;
+
+    p {
+      margin: 0;
+      color: #000;
+    }
+
+    span {
+      color: #fff;
+      //   text-decoration: underline;
+      line-height: 1.75rem;
+      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
+      border-bottom: 1px solid #fff;
+    }
+  }
   color: #777777;
-  height: 215px;
+  //   height: 215px;
 
   a,
   a:hover {
