--- a/scss/main.scss
+++ b/scss/main.scss
@@ -307,13 +307,14 @@ body {
           margin-bottom: 0.5rem;
 
           .option {
-            // background: #fff;
+            background: #fff;
             border-radius: 5px;
             line-height: 0.75rem;
             padding: 0 10%;
             overflow: hidden;
 
             &.selected {
+              background: #cdf6e6;
               border: 3px solid #1db278;
               box-shadow: -1px 3px 15px 2px rgba(0, 0, 0, 0.35);
             }
@@ -342,20 +343,20 @@ body {
             }
 
             &.option-1 {
-              box-shadow: -1px 3px 2px -2px rgba(0, 0, 0, 0.35);
+              box-shadow: -1px 3px 7px -2px rgba(0, 0, 0, 0.35);
             }
 
             &.option-1,
             &.option-3 {
-              background: #fff;
               padding: 15px 0;
               height: 85%;
               transform: translateY(10px);
             }
 
             &.option-2 {
-              background: #cdf6e6;
               padding: 30px 0 20px;
+              box-shadow: 0px 5px 10px -2px rgba(0, 0, 0, 0.35);
+              z-index: 2;
 
               .corner-ribbon {
                 background: #ea4841;
@@ -368,7 +369,7 @@ body {
             }
 
             &.option-3 {
-              box-shadow: 1px 3px 2px -2px rgba(0, 0, 0, 0.35);
+              box-shadow: 2px 3px 7px -2px rgba(0, 0, 0, 0.35);
 
               .corner-ribbon {
                 background: #028090;
@@ -376,7 +377,7 @@ body {
               }
 
               #headline-3 {
-                margin-top: 20px;
+                margin-top: 15px;
               }
 
               img {
