Form style progress

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -44,6 +44,74 @@ body {
     padding: 40px;
     border-top: 0.75px solid rgba(0, 0, 0, 0.25);
     border-bottom: 0.75px solid rgba(0, 0, 0, 0.25);
+
+    .form-group {
+      &.filled {
+        position: relative;
+      }
+
+      ::-webkit-input-placeholder {
+        /* Chrome/Opera/Safari */
+        color: rgba(0, 0, 0, 0.25);
+        padding: 50px 0;
+      }
+      ::-moz-placeholder {
+        /* Firefox 19+ */
+        color: rgba(0, 0, 0, 0.25);
+        padding: 50px 0;
+      }
+      :-ms-input-placeholder {
+        /* IE 10+ */
+        color: rgba(0, 0, 0, 0.25);
+        padding: 50px 0;
+      }
+      :-moz-placeholder {
+        /* Firefox 18- */
+        color: rgba(0, 0, 0, 0.25);
+        padding: 50px 0;
+      }
+
+      label {
+        display: none;
+
+        &.country {
+          display: block;
+          position: absolute;
+          color: #6ec275;
+          font-size: 0.5rem;
+          padding: 2px 0 5px 11px;
+        }
+
+        &.filled {
+          display: block;
+          position: absolute;
+          color: #6ec275;
+          font-size: 0.5rem;
+          padding: 2px 0 5px 11px;
+        }
+      }
+
+      .form-control {
+        &.filled {
+          border: 1.4px solid #6ec275;
+          padding: 20px 10px 10px;
+        }
+
+        &#inputCountry {
+          padding: 10px 0 0 5px;
+        }
+
+        input {
+          padding-top: 20px;
+          padding-bottom: 20px;
+
+          &.filled {
+            font-size: 1rem;
+            padding: 40px 10px 15px;
+          }
+        }
+      }
+    }
   }
 
   // Cart
