--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,6 +40,7 @@ body {
     .youtube {
       width: 100%;
       height: auto;
+      padding-left: 5%;
     }
 
     .jumbotron-header {
@@ -132,20 +133,18 @@ body {
         }
 
         .img-carousel {
-          //   text-align: center;
           margin: 3rem 0 4rem;
+          padding-left: 2.5rem;
 
           img#main-image {
-            width: 450px;
-            height: 300px;
+            width: 500px;
+            height: 325px;
           }
 
           .thumbnails {
-            // justify-content: center;
-
             img.img-thumbnail {
-              height: 75px;
-              width: 75px;
+              height: 85px;
+              width: 85px;
             }
           }
         }
@@ -159,36 +158,36 @@ body {
           #bullet-list-2 {
             margin: 2.5rem 0;
 
+            .cta-2-wrapper {
+              text-align: center;
+
+              h5 {
+                padding-left: 10px;
+                margin-top: 1.5rem;
+              }
+
+              button#cta-2 {
+                font-size: 1.15rem;
+                padding: 12px 0;
+                width: 375px;
+                margin-top: 0.75rem;
+              }
+            }
+
             .bullets {
               margin: -10px 20px;
 
               li {
+                margin-bottom: 10px;
                 display: flex;
-                align-items: center;
+                align-items: top;
                 padding: 0 40px 0 0;
 
                 img {
                   height: 30px;
                   width: 30px;
                   margin-right: 15px;
-                }
-
-                &#li-cta {
-                  display: block;
-                  padding: 0;
-                  margin-left: 20px;
-
-                  h5 {
-                    padding-left: 10px;
-                    margin-top: 0.5rem;
-                  }
-
-                  button#cta-2 {
-                    font-size: 1.15rem;
-                    padding: 12px 0;
-                    width: 375px;
-                    margin-top: 0.75rem;
-                  }
+                  margin-top: 5px;
                 }
               }
             }
