--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -185,10 +185,12 @@ body {
 
     .cart-item {
       display: flex;
-      justify-content: flex-start;
-      align-items: top;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 0.75rem;
 
       .item-img-border {
+        position: relative;
         width: 65px;
         height: 65px;
         border: 0.75px solid rgba(0, 0, 0, 0.1);
@@ -197,10 +199,41 @@ body {
         justify-content: center;
         display: flex;
         align-items: center;
+
+        &:before {
+          content: "";
+          position: absolute;
+          top: -4px;
+          right: -4px;
+          width: 16px;
+          height: 16px;
+          background: #a2a2a2;
+          border-radius: 50%;
+        }
+
+        &:after {
+          content: "1";
+          position: absolute;
+          top: -3px;
+          right: -10px;
+          width: 16px;
+          height: 16px;
+          font-size: 8px;
+          color: #fff;
+          border-radius: 50%;
+        }
       }
-    }
-    .item-price {
-      font-weight: 800;
+
+      .item-name {
+        margin-left: -45px;
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .item-price {
+        font-weight: 800;
+        margin-right: 20px;
+      }
     }
   }
 }
