--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,7 +30,9 @@ body {
   height: 100%;
   margin: 0;
 
-  .main-jumbotron {
+  .main-jumbotron,
+  .jumbotron {
+    padding: 2rem 0;
     margin-bottom: 0;
     background: {
       image: url("../img/jumbotron/bg-gold.png");
@@ -40,7 +42,7 @@ body {
     .youtube {
       width: 100%;
       height: auto;
-      padding-left: 5%;
+      // padding-left: 5%;
     }
 
     .jumbotron-header {
@@ -134,7 +136,7 @@ body {
 
         .img-carousel {
           margin: 3rem 0 4rem;
-          padding-left: 2.5rem;
+          // padding-left: 2.5rem;
 
           img#main-image {
             width: 500px;
@@ -142,6 +144,8 @@ body {
           }
 
           .thumbnails {
+            display: block;
+
             img.img-thumbnail {
               height: 85px;
               width: 85px;
